cmake_minimum_required(VERSION 3.29)
project(Jxust C)

set(CMAKE_C_STANDARD 99)

add_executable(
        B2057.c
        LuoGu/Rumen/B2084.c
        NewCode/Contest/55969/1002.c
        LuoGu/Rumen/B2001.cpp
        NewCode/Contest/55969/1004.cpp
        NewCode/Contest/55969/1005.c
        NewCode/Contest/55969/1007.c
        NewCode/Contest/55969/1008.c
        NewCode/Contest/55969/1009.c
        NewCode/Contest/55969/1010.c
        NewCode/Contest/55969/1011.c
        LuoGu/MainList/P1423.c
        LuoGu/Rumen/B2076.c
)

add_executable(B2076 LuoGu/Rumen/B2076.c)
add_executable(P5723 LuoGu/MainList/P5723.c)
add_executable(P1423 LuoGu/MainList/P1423.c)
add_executable(P1009 LuoGu/MainList/P1009.c)
add_executable(P1046 LuoGu/MainList/P1046.c)