cmake_minimum_required(VERSION 3.29)
project(Jxust C)

set(CMAKE_C_STANDARD 99)

add_executable(
        B2057.c
        B2084.c
        ../../NewCode/Contest/55969/1002.c
        B2001.cpp
        ../../NewCode/Contest/55969/1004.cpp
        ../../NewCode/Contest/55969/1005.c
        ../../NewCode/Contest/55969/1007.c
)
